/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        url = uri('https://maven.lavalink.dev/releases')
    }

    maven {
        url = uri('https://maven.lavalink.dev/snapshots')
    }

    maven {
        url = uri('https://m2.dv8tion.net/releases')
    }

    maven {
        url = uri('https://m2.chew.pro/snapshots/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }

    maven {
        url = uri('https://jitpack.io')
    }

    maven {
        url = uri('https://jcenter.bintray.com/')
    }
}

dependencies {
    implementation 'net.dv8tion:JDA:5.2.1'
    implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
    implementation 'com.konghq:unirest-java:3.11.11'
    implementation 'ch.qos.logback:logback-classic:1.5.0'
    implementation 'commons-validator:commons-validator:1.7'
    implementation 'dev.lavalink.youtube:v2:1.18.0'
    implementation 'dev.arbjerg:lavaplayer:2.2.6'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'net.bramp.ffmpeg:ffmpeg:0.6.2'
    implementation 'io.sfrei:tracksearch:0.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'com.github.JustRed23:lavadsp:0.7.7-1'
}

group = 'com.casko1'
version = '1.4.5'
description = 'wheelbarrow-bot'
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

jar {
    manifest {
        attributes 'Main-Class': 'com.casko1.wheelbarrow.bot.Wheelbarrow'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy 'exclude'
}

targetCompatibility = JavaVersion.VERSION_21
